fixed breakpoint issue with logo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<nav class = "menu l-clearfix">
 					<ul class = "menu__row">
 						<li class = "menu__item menu__item--first js-menu-item " data-section = "js-learning">
-							Online Learning
+							Learning
 						</li>
 						<li class = "menu__item js-menu-item" data-section = "js-products">
 							Products
