switched page section order, added new photos for products, updated copy in learning section

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 				<img class = "header__logo" src = "img/logo.png" alt = "Hands 4 Building"/>
 				<nav class = "menu l-clearfix">
 					<ul class = "menu__row">
-						<li class = "menu__item menu__item--first js-menu-item " data-section = "js-learning">
-							Learning
-						</li>
-						<li class = "menu__item js-menu-item" data-section = "js-products">
+						<li class = "menu__item menu__item--first  js-menu-item" data-section = "js-products">
 							Products
+						</li>
+						<li class = "menu__item js-menu-item " data-section = "js-learning">
+							Learning
 						</li>
 					</ul>
 				</nav>
@@ -64,24 +64,11 @@
 			</div>
 		</header>
 		<main role = "main content">
-		<section class = "page-section js-learning">
-			<div class = "l-contain">
-				<h2 class = "page-section__header">Watch and Learn Online</h2>
-				<div class = "grid-column-6">
-					<div class="responsive-video">
-						<iframe src="https://player.vimeo.com/video/102071427" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-					</div>
-				</div>
-				<div class = "grid-column-6">
-					<p class = "page-section__copy">The Hands 4 Building video instructions teach you how to build your project, one simple step at a time.</p>
-				</div>
-			</div>
-		</section>
 		<section class = "page-section page-section--gray  js-products">
 			<div class = "l-contain">
 				<h2 class = "page-section__header">Starter Kit</h2>
 				<div class = "grid-column-8 grid-shift-2">
-					<p class = "page-section__copy page-section__copy--center">The Hands 4 Building video instructions teach you how to build your project, one simple step at a time.</p>
+					<p class = "page-section__copy page-section__copy--center">Starter Kits include the H4B Workshop Tools, building materials, and blueprints. Use your tools again and again to build the Additional Projects!</p>
 				</div>
 				<div class = "grid-column-4 grid-shift-4">
 					<div class = "product product__house">
@@ -98,21 +85,21 @@
 				<section>
 					<div class = "grid-column-4">
 						<div class = "product product--additional">
-							<img class = "product__img" src = "img/windmill-project.png" alt = "Model House Project" />
+							<img class = "product__img" src = "img/windmill-project.jpg" alt = "Model House Project" />
 							<p class = "product__copy">Windmill Project - <strong>$35</strong> </p>
 							<div class = "btn btn--yellow"><a class = "btn__link" target= "_blank" href = "http://www.amazon.com/dp/B01CE17AUU/ref=cm_sw_su_dp" >Purchase on Amazon</a></div>
 						</div>
 					</div>
 					<div class = "grid-column-4">
 						<div class = "product product--additional">
-							<img class = "product__img" src = "img/bridge-project.png" alt = "Model House Project" />
+							<img class = "product__img" src = "img/bridge-project.jpg" alt = "Model House Project" />
 							<p class = "product__copy">Bridge Project - <strong>$35</strong> </p>
 							<div class = "btn btn--yellow"><a class = "btn__link" target = "_blank" href = "http://www.amazon.com/dp/B01CZHJOVG/ref=cm_sw_su_dp" >Purchase on Amazon</a></div>
 						</div>
 					</div>
 					<div class = "grid-column-4">
 						<div class = "product product--additional">
-							<img class = "product__img" src = "img/wagon-project.png" alt = "Model House Project" />
+							<img class = "product__img" src = "img/wagon-project.jpg" alt = "Model House Project" />
 							<p class = "product__copy">Wagon and Fence Project - <strong>$35</strong> </p>
 							<div class = "btn btn--yellow"><a class = "btn__link" target = "_blank" href = "http://www.amazon.com/dp/B01CZH6ACW/ref=cm_sw_su_dp" >Purchase on Amazon</a></div>
 						</div>
@@ -120,6 +107,30 @@
 				</section>
 			</div>
 		</section>
+		<section class = "page-section js-learning">
+			<div class = "l-contain">
+				<h2 class = "page-section__header">Watch & Learn Online</h2>
+				<div class = "grid-column-6">
+					<div class="responsive-video">
+						<iframe src="https://player.vimeo.com/video/102071427" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+					</div>
+					<p class = "page-section__copy page-section__copy--sml">Watch this sample video showing the first steps of the Model House Project.</p>
+
+				</div>
+				<div class = "grid-column-6">
+					<p class = "page-section__copy">The H4B videos will teach you how to:</p>
+					<ul class = "page-section__list">
+						<li> Set up your H4B Workshop</li>
+						<li>Measure and cut pieces</li>
+						<li>Glue and assemble your project</li>
+						<li>Glue and assemble your project</li>
+						<li>Add finishing touches</li>
+
+					</ul>
+				</div>
+			</div>
+		</section>
+		
 		</main>
 		<footer class = "footer">
 			<div class = "l-contain">
